// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONSchemaViewer - Generic keywords test annotations 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Match anything
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        any
      </span>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        Always valid
      </div>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <div>
          🚨 
          Deprecated
        </div>
        <div>
          🚨 
          read only
        </div>
        <div>
          <strong>
            Default value :
          </strong>
           
          <code>
            Default value
          </code>
        </div>
        <div>
          <strong>
            Example values :
          </strong>
           
          <div
            className="tabs-container"
          >
            <ul
              aria-orientation="horizontal"
              className="tabs"
              role="tablist"
            >
              <li
                aria-selected={true}
                onClick={[Function]}
                tabIndex={0}
              >
                Example 0
              </li>
              <li
                aria-selected={false}
                onClick={[Function]}
                tabIndex={-1}
              >
                Example 1
              </li>
            </ul>
            <div>
              <div
                hidden={false}
                role="tabpanel"
              >
                <div
                  role="tabpanel"
                >
                  <code>
                    Anything
                  </code>
                </div>
              </div>
              <div
                hidden={true}
                role="tabpanel"
              >
                <div
                  role="tabpanel"
                >
                  <code>
                    4035
                  </code>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        This is a schema that matches anything.
      </div>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Generic keywords test const 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        object
      </span>
      <ul>
        <li
          data-level={1}
          id="/properties/country"
        >
          <details
            open={false}
          >
            <summary>
              <strong>
                country
              </strong>
               
              <code>
                United States of America
              </code>
               
              <strong>
                constant
              </strong>
            </summary>
            <div>
              <div>
                <strong>
                  type
                </strong>
                 : 
                <span
                  style={
                    {
                      "opacity": "0.6",
                    }
                  }
                >
                  string
                </span>
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                >
                  <div>
                    <strong>
                      Constant value :
                    </strong>
                     
                    <code>
                      United States of America
                    </code>
                  </div>
                </div>
              </div>
            </div>
          </details>
        </li>
      </ul>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      />
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Generic keywords test enum 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        string
      </span>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <div>
          <strong>
            Possible values :
          </strong>
           
          <ul>
            <li>
              <code>
                red
              </code>
            </li>
            <li>
              <code>
                amber
              </code>
            </li>
            <li>
              <code>
                green
              </code>
            </li>
          </ul>
        </div>
        <div>
          <strong>
            Example values :
          </strong>
           
          <div
            className="tabs-container"
          >
            <ul
              aria-orientation="horizontal"
              className="tabs"
              role="tablist"
            >
              <li
                aria-selected={true}
                onClick={[Function]}
                tabIndex={0}
              >
                Example 0
              </li>
            </ul>
            <div>
              <div
                hidden={false}
                role="tabpanel"
              >
                <div
                  role="tabpanel"
                >
                  <code>
                    red
                  </code>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</details>
`;
